--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "homepage": "https://github.com/U-GOD/hiero-block-bridge#readme",
   "dependencies": {
     "@hashgraph/sdk": "^2.80.0",
+    "execa": "^9.6.1",
     "pino": "^10.3.1",
     "zod": "^4.3.6"
   },
